cp project/force-app/main/default/objects/Payment_Schedule__c/fields/Construction_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Construction_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Construction Milestone</label>
    <referenceTo>Construction_Milestone__c</referenceTo>
    <relationshipLabel>Payment Schedules</relationshipLabel>
    <relationshipName>Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>