cp project/force-app/main/default/objects/Payment_Schedule__c/fields/Customer_Portion__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portion__c</fullName>
    <label>Customer Portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>