cp project/force-app/main/default/objects/Payment_Schedule__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active Plan Record</label>
    <type>Checkbox</type>
</CustomField>