cp project/force-app/main/default/objects/Payment_Schedule__c/fields/Loan_Portion__c.field-meta.xml
<CustomField>
    <fullName>Loan_Portion__c</fullName>
    <label>Loan Portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>