cp project/force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Plan_Modification__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Modification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan Modification</label>
    <referenceTo>Payment_Plan_Modification__c</referenceTo>
    <relationshipLabel>Payment Plan Modification</relationshipLabel>
    <relationshipName>Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>