cp project/force-app/main/default/objects/Payment_Schedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Due</fullName>
                <isActive>false</isActive>
                <label>Due</label>
            </value>
            <value>
                <fullName>Upcoming</fullName>
                <isActive>false</isActive>
                <label>Upcoming</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>